--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
+    "postinstall": "bower install && node app/startup.js",
     "start": "electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
@@ -18,5 +19,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^1.4.1"
+  },
+  "dependencies": {
+    "mongoose": "^4.7.8"
   }
 }
